           w = window():w.setFont(10, "pt", false, true)
	Fixed problem with escaped chars using FORMAT
	Fixed problem with XNOR command result
	TRUE is now always returned as 1
	Fixed problem with IMP and EQV command result
	Fixed problem with INKEY command
	Fixed capslock handling
	Added file manager to main shell program
	Fixed issues with TRY/CATCH
	Fixed using POINT to retrieve IMAGE data

2016-02-11
	Added export to mobile command (SDL)
	Added Desktop shortcut command (android)

2015-12-05
	Implemented loading recent files via ALT+1 .. ALT+9
	Fix potential editor crash with empty support widget
	Fix potential crash with debug target
	Fix restore path to only function when no other arguments supplied

2015-11-01
	Fix debugger launch in linux build
	Fix editor display issue with keyword completion
	Fix editor case insensitive search
	Fix image drawing for large images
	Fix PAINT infinite loop
	Fix keyboard handling for non-us keymaps
	Fix Ctrl+Home editor keystroke handler
	Fix crash with online command if site is down
	Fix over scroll issue with line number widget
	Fix screen dump invalid file name for online files
	Fix file manager .bas file case sensitivity
	Fix editor markup on map fields that look like keywords
	Fix scanner inserting line-no bytecode for empty or comment lines
	Implemented editor F2 command to display online help
	Implemented calling IMAGE with another image variable

2015-10-20
	Fix LET when assigning a value to a MAP/ARRAY field

2015-09-15
	SDL Update PEN(3) to work more like FLTK
	Fix display output before PEN
	Fix BOLD and ITALIC font display
	Context menu edit keyword completion
	Updated program icon
	Editor line number widget can be used for scrolling
	Updated editor help display
	Fix TSAVE with try/catch

2015-08-26
	Editor fixes:
	- now displays an i-beam/edit cursor
	- highlighting for numbers and keywords
	- F1 key for keywords surrounded by punctuation
	- page scrolling with up/down arrow keys