@@ -35,11 +35,16 @@ extern "C" {
 #define IMG_OPACITY "opacity"
 #define IMG_ID "ID"
 #define IMG_BID "BID"
-#define IMG_HANDLE "HANDLE"
 
 extern System *g_system;
 unsigned nextId = 0;
 strlib::List<ImageBuffer *> cache;
+
+void create_func(var_p_t form, const char *name, method cb);
+
+void reset_image_cache() {
+  cache.removeAll();
+}
 
 ImageBuffer::ImageBuffer() :
   _bid(0),
@@ -106,18 +111,99 @@ void ImageDisplay::draw(int x, int y, int w, int h, int cw) {
   maDrawRGB(&dstPoint, _buffer->_image, &srcRect, _opacity, _buffer->_width);
 }
 
-// share image buffer from another image variable
-ImageBuffer *load_image(var_t *map) {
+dev_file_t *eval_filep() {
+  dev_file_t *result = NULL;
+  code_skipnext();
+  if (code_getnext() == '#') {
+    int handle = par_getint();
+    if (!prog_error) {
+      result = dev_getfileptr(handle);
+    }
+  }
+  return result;
+}
+
+uint8_t *get_image_data(int x, int y, int w, int h) {
+  MARect rc;
+  rc.left = x;
+  rc.top = y;
+  rc.width = w;
+  rc.height = h;
+  int size = w * 4 * h * 4;
+  uint8_t *result = (uint8_t *)malloc(size);
+  if (result != NULL) {
+    g_system->getOutput()->redraw();
+    maGetImageData(HANDLE_SCREEN, result, &rc, w);
+  }
+  return result;
+}
+
+ImageBuffer *load_image(var_int_t x) {
+  var_int_t y, w, h;
+  int count = par_massget("iii", &y, &w, &h);
+  int width = g_system->getOutput()->getWidth();
+  int height = g_system->getOutput()->getHeight();
   ImageBuffer *result = NULL;
-  int bid = map->type == V_MAP ? map_get_int(map, IMG_BID, -1) : -1;
-  if (bid != -1) {
-    List_each(ImageBuffer *, it, cache) {
-      ImageBuffer *next = (*it);
-      if (next->_bid == (unsigned)bid) {
-        result = next;
-        break;
+
+  if (prog_error || count == 0 || count == 2) {
+    err_throw(ERR_PARAM);
+  } else {
+    if (count == 1) {
+      w = width;
+      h = height;
+    } else {
+      w = MIN(w, width);
+      h = MIN(h, height);
+    }
+    uint8_t* image = get_image_data(x, y, w, h);
+    if (image == NULL) {
+      err_throw(ERR_IMAGE_LOAD, "Failed to load screen image");
+    } else {
+      result = new ImageBuffer();
+      result->_bid = ++nextId;
+      result->_width = w;
+      result->_height = h;
+      result->_filename = NULL;
+      result->_image = image;
+      cache.add(result);
+    }
+  }
+  return result;
+}
+
+// share image buffer from another image variable
+ImageBuffer *load_image(var_t *var) {
+  ImageBuffer *result = NULL;
+  if (var->type == V_MAP) {
+    int bid = map_get_int(var, IMG_BID, -1);
+    if (bid != -1) {
+      List_each(ImageBuffer *, it, cache) {
+        ImageBuffer *next = (*it);
+        if (next->_bid == (unsigned)bid) {
+          result = next;
+          break;
+        }
       }
     }
+  } else if (var->type == V_ARRAY && var->v.a.maxdim == 2) {
+    int w = ABS(var->v.a.lbound[0] - var->v.a.ubound[0]) + 1;
+    int h = ABS(var->v.a.lbound[1] - var->v.a.ubound[1]) + 1;
+    unsigned char *image = (unsigned char *)malloc(w * h);
+    for (int y = 0; y < h; y++) {
+      for (int x = 0; x < w; x++) {
+        int pos = y * w + x;
+        var_t *elem = (var_t *) (var->v.a.ptr + (sizeof(var_t) * pos));
+        // TODO combine RGBA from next four bytes of image[pos]
+        //image[pos] = v_getint(elem);
+      }
+    }
+    result = new ImageBuffer();
+    result->_bid = ++nextId;
+    result->_width = w;
+    result->_height = h;
+    result->_filename = NULL;
+    result->_image = image;
+    cache.add(result);
   }
   return result;
 }
@@ -210,21 +296,6 @@ ImageBuffer *load_xpm_image(char **data) {
   return result;
 }
 
-uint8_t *get_image_data(int x, int y, int w, int h) {
-  MARect rc;
-  rc.left = x;
-  rc.top = y;
-  rc.width = w;
-  rc.height = h;
-  int size = w * 4 * h * 4;
-  uint8_t *result = (uint8_t *)malloc(size);
-  if (result != NULL) {
-    g_system->getOutput()->flushNow();
-    maGetImageData(HANDLE_SCREEN, result, &rc, w);
-  }
-  return result;
-}
-
 void cmd_image_show(var_s *self) {
   ImageDisplay image;
   image._bid = map_get_int(self, IMG_BID, -1);
@@ -281,44 +352,50 @@ void cmd_image_hide(var_s *self) {
 }
 
 void cmd_image_save(var_s *self) {
-  var_int_t x, y, w, h;
-  int count = par_massget("iiii", &x, &y, &w, &h);
-  int width = g_system->getOutput()->getWidth();
-  int height = g_system->getOutput()->getHeight();
+  unsigned id = map_get_int(self, IMG_BID, -1);
+  ImageBuffer *image = NULL;
+  List_each(ImageBuffer *, it, cache) {
+    ImageBuffer *next = (*it);
+    if (next->_bid == id) {
+      image = next;
+      break;
+    }
+  }
 
-  if (count == 0 && !prog_error) {
-    // save entire screen
-    x = 0;
-    y = 0;
-    w = width;
-    h = height;
-  } else if (count == 2) {
-    // save width + height at 0, 0
-    w = MIN(x, width);
-    h = MIN(y, height);
-    x = 0;
-    y = 0;
-  } else if (count == 4) {
-    w = MIN(w, width);
-    h = MIN(h, height);
-  } else {
-    err_throw(ERR_PARAM);
+  var_t *array = NULL;
+  dev_file_t *filep = NULL;
+  byte code = code_peek();
+  switch (code) {
+  case kwTYPE_SEP:
+    filep = eval_filep();
+    break;
+  default:
+    array = par_getvar_ptr();
+    break;
   }
 
   bool saved = false;
-  int handle = map_get_int((var_p_t)self, IMG_HANDLE, -1);
-  if (!prog_error && handle != -1) {
-    dev_file_t *filep = dev_getfileptr(handle);
-    if (filep != NULL) {
-      uint8_t* image = get_image_data(x, y, w, h);
-      if (image != NULL) {
-        if (!lodepng_encode32_file(filep->name, image, w, h)) {
-          saved = true;
-        }
-        free(image);
+  if (!prog_error && image != NULL) {
+    int w = image->_width;
+    int h = image->_height;
+    if (filep != NULL && filep->open_flags == DEV_FILE_OUTPUT) {
+      if (!lodepng_encode32_file(filep->name, image->_image, w, h)) {
+        saved = true;
       }
+    } else if (array != NULL) {
+      v_tomatrix(array, w, h);
+      for (int y = 0; y < h; y++) {
+        for (int x = 0; x < w; x++) {
+          int pos = y * w + x;
+          var_t *elem = (var_t *) (array->v.a.ptr + (sizeof(var_t) * pos));
+          // TODO combine RGBA from next four bytes of image[pos]
+          //v_setint(elem, image->_image[pos]);
+        }
+      }
+      saved = true;
     }
   }
+
   if (!saved) {
     err_throw(ERR_IMAGE_SAVE);
   }
@@ -333,27 +410,12 @@ void create_image(var_p_t var, ImageBuffer *image) {
   map_add_var(var, IMG_ZINDEX, 1);
   map_add_var(var, IMG_OPACITY, 0);
   map_add_var(var, IMG_ID, ++nextId);
-
-  if (image != NULL) {
-    map_add_var(var, IMG_WIDTH, image->_width);
-    map_add_var(var, IMG_HEIGHT, image->_height);
-    map_add_var(var, IMG_BID, image->_bid);
-
-    var_p_t v_show = map_add_var(var, "show", 0);
-    v_show->type = V_FUNC;
-    v_show->v.fn.self = var;
-    v_show->v.fn.cb = cmd_image_show;
-
-    var_p_t v_hide = map_add_var(var, "hide", 0);
-    v_hide->type = V_FUNC;
-    v_hide->v.fn.self = var;
-    v_hide->v.fn.cb = cmd_image_hide;
-  } else {
-    var_p_t v_save = map_add_var(var, "save", 0);
-    v_save->type = V_FUNC;
-    v_save->v.fn.self = var;
-    v_save->v.fn.cb = cmd_image_save;
-  }
+  map_add_var(var, IMG_WIDTH, image->_width);
+  map_add_var(var, IMG_HEIGHT, image->_height);
+  map_add_var(var, IMG_BID, image->_bid);
+  create_func(var, "show", cmd_image_show);
+  create_func(var, "hide", cmd_image_hide);
+  create_func(var, "save", cmd_image_save);
 }
 
 // loads an image for the form image input type
@@ -417,19 +479,15 @@ void screen_dump() {
 
 extern "C" void v_create_image(var_p_t var) {
   var_t arg;
-  int handle = -1;
   ImageBuffer *image = NULL;
   dev_file_t *filep = NULL;
 
   byte code = code_peek();
   switch (code) {
   case kwTYPE_SEP:
-    code_skipnext();
-    if (code_getnext() == '#') {
-      handle = par_getint();
-      if (!prog_error) {
-        filep = dev_getfileptr(handle);
-      }
+    filep = eval_filep();
+    if (filep != NULL) {
+      image = load_image(filep);
     }
     break;
 
@@ -455,6 +513,9 @@ extern "C" void v_create_image(var_p_t var) {
         }
         image = load_xpm_image(data);
         delete [] data;
+      } else if (arg.v.a.maxdim == 2) {
+        // load from 2d array
+        image = load_image(&arg);
       } else if (elem0->type == V_INT) {
         unsigned char *data = new unsigned char[arg.v.a.size];
         for (int i = 0; i < arg.v.a.size; i++) {
@@ -464,6 +525,8 @@ extern "C" void v_create_image(var_p_t var) {
         image = load_image(data, arg.v.a.size);
         delete [] data;
       }
+    } else if (arg.type == V_INT && !prog_error) {
+      image = load_image(arg.v.i);
     } else {
       image = load_image(&arg);
     }
@@ -471,20 +534,9 @@ extern "C" void v_create_image(var_p_t var) {
     break;
   };
 
-  if (image == NULL && filep != NULL) {
-    if (filep->open_flags == DEV_FILE_OUTPUT) {
-      create_image(var, NULL);
-      map_add_var(var, IMG_HANDLE, handle);
-    } else {
-      handle = -1;
-      image = load_image(filep);
-    }
-  }
-
   if (image != NULL) {
     create_image(var, image);
-  } else if (handle == -1) {
+  } else {
     err_throw(ERR_BAD_FILE_HANDLE);
   }
 }
-
