@@ -25,6 +25,7 @@
 	Added file manager to main shell program
 	Fixed issues with TRY/CATCH
 	Fixed using POINT to retrieve IMAGE data
+	The IMAGE argument can now be PNG data stored in an INT array
 
 2016-02-11
 	Added export to mobile command (SDL)
